--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,24 @@ jobs:
       configuration: '$(buildConfiguration)'
       vsTestVersion: "16.0"
       testAssemblyVer2: '**/bin/$(buildConfiguration)/**/TestProject.dll'
+
+- job: macOS
+  pool:
+    vmImage: 'macOS-10.14'
+
+  variables:
+    solution: '**/*.sln'
+    buildPlatform: 'Any CPU'
+    buildConfiguration: 'Release'
+
+  steps:
+  - task: NuGetToolInstaller@0
+
+  - task: DotNetCoreInstaller@0
+    inputs:
+      packageType: sdk
+      version: '2.1.300'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
