Added macOS test

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,3 +61,7 @@ jobs:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'test'
