--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,7 @@ jobs:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
+      arguments: '-c Release'
 
   - task: DotNetCoreCLI@2
     inputs:
